<resources>
    <string name="app_name">Reflect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_s_time_to_reflect">It\'s time to reflect.</string>
    <string name="welcome">Welcome</string>
    <string name="settings_wheel">settings wheel</string>
    <string name="enter_mood">Enter Mood</string>
    <string name="what_caused_you_to_feel_this_way">What caused you to feel this way?</string>
    <string name="mood_color">Mood Color</string>
    <string name="day_complete">Day Complete</string>
    <string-array name="spinnerChoices">
        <item>Enraged</item>
        <item>Panicked</item>
        <item>Furious</item>
        <item>Frightened</item>
        <item>Anxious</item>
        <item>Troubled</item>
        <item>Enraged</item>
        <item>Angry</item>
        <item>Worried</item>
        <item>Jittery</item>
        <item>Tense</item>
        <item>Nervous</item>
        <item>Irritated</item>
        <item>Stunned</item>
        <item>Annoyed</item>
        <item>Disgusted</item>
        <item>Pessimistic</item>
        <item>Despair</item>
        <item>Miserable</item>
        <item>Disappointed</item>
        <item>Lonely</item>
        <item>Sad</item>
        <item>Exhausted</item>
        <item>Bored</item>
        <item>Tired</item>
        <item>Surprised</item>
        <item>Energized</item>
        <item>Pleased</item>
        <item>Cheerful</item>
        <item>Joyful</item>
        <item>Motivated</item>
        <item>Focused</item>
        <item>Hopeful</item>
        <item>Optimistic</item>
        <item>Inspired</item>
        <item>Proud</item>
        <item>Elated</item>
        <item>Excited</item>
        <item>Thrilled</item>
        <item>Calm</item>
        <item>Relaxed</item>
        <item>Sleepy</item>
        <item>Chill</item>
        <item>Thoughtful</item>
        <item>Satisfied</item>
        <item>Restful</item>
        <item>Loving</item>
        <item>Grateful</item>
        <item>Blessed</item>
        <item>Touched</item>
        <item>Balanced</item>
        <item>Carefree</item>
        <item>Serene</item>
    </string-array>
    <string-array name="darkPinkMoods">
        <item>Enraged</item>
        <item>Panicked</item>
        <item>Furious</item>
        <item>Frightened</item>
        <item>Anxious</item>
        <item>Troubled</item>
        <item>Enraged</item>
        <item>Angry</item>
    </string-array>
    <string-array name="lightPinkMoods">
        <item>Worried</item>
        <item>Jittery</item>
        <item>Tense</item>
        <item>Nervous</item>
        <item>Irritated</item>
        <item>Stunned</item>
        <item>Annoyed</item>
    </string-array>
    <string-array name="darkBlueMoods">
        <item>Disgusted</item>
        <item>Pessimistic</item>
        <item>Despair</item>
        <item>Miserable</item>
        <item>Disappointed</item>
    </string-array>
    <string-array name="lightBlueMoods">
        <item>Lonely</item>
        <item>Sad</item>
        <item>Exhausted</item>
        <item>Bored</item>
        <item>Tired</item>
    </string-array>
    <string-array name="lightYellowMoods">
        <item>Surprised</item>
        <item>Energized</item>
        <item>Pleased</item>
        <item>Cheerful</item>
        <item>Joyful</item>
        <item>Motivated</item>
        <item>Focused</item>
    </string-array>
    <string-array name="darkYellowMoods">
        <item>Hopeful</item>
        <item>Optimistic</item>
        <item>Inspired</item>
        <item>Proud</item>
        <item>Elated</item>
        <item>Excited</item>
        <item>Thrilled</item>
    </string-array>
    <string-array name="lightGreenMoods">
        <item>Calm</item>
        <item>Relaxed</item>
        <item>Sleepy</item>
        <item>Chill</item>
        <item>Thoughtful</item>
        <item>Satisfied</item>
        <item>Restful</item>
    </string-array>
    <string-array name="darkGreenMoods">
        <item>Loving</item>
        <item>Grateful</item>
        <item>Blessed</item>
        <item>Touched</item>
        <item>Balanced</item>
        <item>Carefree</item>
        <item>Serene</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>