<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reflect.todolistactivity.AddViewMoodEntryItemActivity">

    <Button
        android:id="@+id/btnSaveMoodItem"
        android:layout_width="340dp"
        android:layout_height="49dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:background="@color/colorPrimary"
        android:text="@string/enter_mood"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMoodDescription" />

    <EditText
        android:id="@+id/etMoodDescription"
        android:layout_width="317dp"
        android:layout_height="295dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/what_caused_you_to_feel_this_way"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toTopOf="@+id/btnSaveMoodItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvItemColor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvItemColor"
        android:layout_width="110dp"
        android:layout_height="107dp"
        android:gravity="center"
        android:layout_marginBottom="69dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="112dp"
        android:hint="@string/mood_color"
        android:inputType="none"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/etMoodDescription"
        app:layout_constraintEnd_toStartOf="@+id/spMoodPicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spMoodPicker"
        android:layout_width="213dp"
        android:layout_height="36dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toTopOf="@+id/etMoodDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvItemColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.778" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>