<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todolistactivity.ToDoListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="49dp"
            android:layout_height="50dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="27dp"
            android:background="#00FFFFFF"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/settings_wheel"
            android:src="@drawable/settings_icon_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReflectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="47dp"
            android:layout_marginEnd="172dp"
            android:layout_marginStart="181dp"
            android:layout_marginTop="22dp"
            android:text="@string/it_s_time_to_reflect"
            app:layout_constraintBottom_toTopOf="@+id/rvToDoList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:layout_marginEnd="198dp"
            android:layout_marginStart="155dp"
            android:layout_marginTop="91dp"
            android:text="@string/welcome"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/rvToDoList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.179"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.904" />

        <android.widget.ListView
            android:id="@+id/rvToDoList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="216dp"
            app:layout_constraintBottom_toTopOf="@+id/btnNewMoodEntry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNewMoodEntry"
            android:layout_width="78dp"
            android:layout_height="75dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="228dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:cropToPadding="false"
            android:src="@drawable/add_mood_icon_foreground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>